# RaspberryPi-WebRTC

./: .gitmodules  CMakeLists.txt
doc/: ARCHITECTURE.md  MQTT_PROTOCOL_IMPLEMENTATION.md  RECORDER_DESIGN.md  RTC_DESIGN.md
src/: args.h  main.cpp  parser.cpp
src/gnss/: CMakeLists.txt  gnss_service.cpp  gnss_service.h
src/signaling/: CMakeLists.txt  kinesis_service.cpp  kinesis_service.h
